data: add new blocked IP
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -125,6 +125,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.2.27'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.26.3.27'
 	option metric '256'
 
