data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -135,7 +135,17 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.4.102'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.26.4.244'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.26.5.102'
 	option metric '256'
 
 config route
@@ -226,6 +236,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.67.74.82'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.67.74.105'
 	option metric '256'
 
 config route
