data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -10,6 +10,21 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '52.223.197.248'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '52.223.202.11'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '52.223.202.28'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '66.33.60.34'
 	option metric '256'
 
@@ -171,6 +186,16 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '138.113.167.17'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '138.113.167.104'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '138.113.167.110'
 	option metric '256'
 
 config route
