data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -75,6 +75,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.18.40.29'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.21.16.1'
 	option metric '256'
 
@@ -221,6 +226,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '162.159.141.50'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.64.147.227'
 	option metric '256'
 
 config route
