data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -1,5 +1,20 @@
 config route
 	option interface 'cloudflare'
+	option target '3.75.10.80'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '3.124.100.143'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '3.125.36.175'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '5.134.119.194'
 	option metric '256'
 
@@ -175,7 +190,17 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.8.129'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.26.9.81'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.26.9.129'
 	option metric '256'
 
 config route
@@ -256,6 +281,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.67.69.61'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.67.69.88'
 	option metric '256'
 
 config route
