data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -245,6 +245,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '151.101.135.52'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '162.159.140.98'
 	option metric '256'
 
@@ -266,6 +271,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.66.0.96'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.66.0.227'
 	option metric '256'
 
 config route
@@ -345,6 +355,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '185.27.134.223'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '185.199.108.153'
 	option metric '256'
 
@@ -361,5 +376,10 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '185.199.111.153'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '216.198.79.1'
 	option metric '256'
 
