data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -25,6 +25,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '47.246.45.243'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '52.223.197.248'
 	option metric '256'
 
@@ -81,6 +86,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '76.76.21.164'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.18.34.155'
 	option metric '256'
 
 config route
@@ -266,6 +276,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.64.150.28'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.64.153.101'
 	option metric '256'
 
 config route
