data: add new blocked IP
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -395,6 +395,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '188.114.97.5'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '216.198.79.1'
 	option metric '256'
 
