data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -50,6 +50,16 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '66.33.60.66'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '66.33.60.67'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '66.33.60.129'
 	option metric '256'
 
@@ -80,12 +90,27 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '76.76.21.123'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '76.76.21.142'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
 	option target '76.76.21.164'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '76.76.21.241'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '79.127.138.15'
 	option metric '256'
 
 config route
@@ -155,6 +180,16 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.0.151'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.26.0.227'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.26.1.139'
 	option metric '256'
 
@@ -176,6 +211,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '104.26.3.27'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.26.4.67'
 	option metric '256'
 
 config route
@@ -250,6 +290,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '143.244.56.52'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '143.244.56.58'
 	option metric '256'
 
@@ -315,6 +360,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '172.67.69.200'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '172.67.69.232'
 	option metric '256'
 
@@ -331,6 +381,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.67.74.105'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.67.74.155'
 	option metric '256'
 
 config route
@@ -396,6 +451,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '188.114.97.5'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '199.34.228.49'
 	option metric '256'
 
 config route
