data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -65,6 +65,16 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '66.33.60.130'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '66.33.60.193'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '66.33.60.194'
 	option metric '256'
 
@@ -230,6 +240,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.5.67'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.26.5.102'
 	option metric '256'
 
@@ -291,6 +306,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '143.244.56.52'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '143.244.56.53'
 	option metric '256'
 
 config route
