scraper: fix missing target CIDR
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -1,485 +1,485 @@
 config route
 	option interface 'cloudflare'
-	option target '3.75.10.80'
+	option target '3.75.10.80/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '3.124.100.143'
+	option target '3.124.100.143/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '3.125.36.175'
+	option target '3.125.36.175/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '5.134.119.194'
+	option target '5.134.119.194/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '5.188.183.13'
+	option target '5.188.183.13/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '47.246.45.243'
+	option target '47.246.45.243/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '52.223.197.248'
+	option target '52.223.197.248/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '52.223.202.11'
+	option target '52.223.202.11/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '52.223.202.28'
+	option target '52.223.202.28/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.34'
+	option target '66.33.60.34/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.66'
+	option target '66.33.60.66/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.67'
+	option target '66.33.60.67/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.129'
+	option target '66.33.60.129/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.130'
+	option target '66.33.60.130/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.193'
+	option target '66.33.60.193/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '66.33.60.194'
+	option target '66.33.60.194/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.22'
+	option target '76.76.21.22/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.61'
+	option target '76.76.21.61/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.93'
+	option target '76.76.21.93/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.98'
+	option target '76.76.21.98/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.123'
+	option target '76.76.21.123/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.142'
+	option target '76.76.21.142/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.164'
+	option target '76.76.21.164/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '76.76.21.241'
+	option target '76.76.21.241/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '79.127.138.15'
+	option target '79.127.138.15/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.18.34.155'
+	option target '104.18.34.155/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.18.37.228'
+	option target '104.18.37.228/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.18.40.29'
+	option target '104.18.40.29/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.16.1'
+	option target '104.21.16.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.32.1'
+	option target '104.21.32.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.48.1'
+	option target '104.21.48.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.52.215'
+	option target '104.21.52.215/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.55.60'
+	option target '104.21.55.60/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.64.1'
+	option target '104.21.64.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.80.1'
+	option target '104.21.80.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.96.1'
+	option target '104.21.96.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.21.112.1'
+	option target '104.21.112.1/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.0.139'
+	option target '104.26.0.139/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.0.151'
+	option target '104.26.0.151/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.0.227'
+	option target '104.26.0.227/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.1.139'
+	option target '104.26.1.139/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.1.151'
+	option target '104.26.1.151/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.1.227'
+	option target '104.26.1.227/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.2.27'
+	option target '104.26.2.27/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.3.27'
+	option target '104.26.3.27/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.4.67'
+	option target '104.26.4.67/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.4.102'
+	option target '104.26.4.102/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.4.244'
+	option target '104.26.4.244/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.5.67'
+	option target '104.26.5.67/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.5.102'
+	option target '104.26.5.102/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.8.81'
+	option target '104.26.8.81/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.8.129'
+	option target '104.26.8.129/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.9.81'
+	option target '104.26.9.81/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.9.129'
+	option target '104.26.9.129/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.10.183'
+	option target '104.26.10.183/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '104.26.11.183'
+	option target '104.26.11.183/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '138.113.167.17'
+	option target '138.113.167.17/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '138.113.167.104'
+	option target '138.113.167.104/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '138.113.167.110'
+	option target '138.113.167.110/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '138.113.167.111'
+	option target '138.113.167.111/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '143.244.56.49'
+	option target '143.244.56.49/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '143.244.56.52'
+	option target '143.244.56.52/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '143.244.56.53'
+	option target '143.244.56.53/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '143.244.56.58'
+	option target '143.244.56.58/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '151.101.135.52'
+	option target '151.101.135.52/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '162.159.140.98'
+	option target '162.159.140.98/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '162.159.141.50'
+	option target '162.159.141.50/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.64.147.227'
+	option target '172.64.147.227/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.64.150.28'
+	option target '172.64.150.28/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.64.153.101'
+	option target '172.64.153.101/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.66.0.96'
+	option target '172.66.0.96/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.66.0.227'
+	option target '172.66.0.227/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.66.1.46'
+	option target '172.66.1.46/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.68.60'
+	option target '172.67.68.60/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.69.61'
+	option target '172.67.69.61/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.69.88'
+	option target '172.67.69.88/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.69.200'
+	option target '172.67.69.200/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.69.232'
+	option target '172.67.69.232/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.74.13'
+	option target '172.67.74.13/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.74.82'
+	option target '172.67.74.82/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.74.105'
+	option target '172.67.74.105/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.74.155'
+	option target '172.67.74.155/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.145.90'
+	option target '172.67.145.90/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.162.53'
+	option target '172.67.162.53/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.196.60'
+	option target '172.67.196.60/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.200.91'
+	option target '172.67.200.91/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.204.29'
+	option target '172.67.204.29/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.67.220.241'
+	option target '172.67.220.241/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '172.68.68.52'
+	option target '172.68.68.52/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '185.27.134.223'
+	option target '185.27.134.223/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '185.199.108.153'
+	option target '185.199.108.153/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '185.199.109.153'
+	option target '185.199.109.153/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '185.199.110.153'
+	option target '185.199.110.153/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '185.199.111.153'
+	option target '185.199.111.153/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '188.114.97.5'
+	option target '188.114.97.5/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '199.34.228.49'
+	option target '199.34.228.49/32'
 	option metric '256'
 
 config route
 	option interface 'cloudflare'
-	option target '216.198.79.1'
+	option target '216.198.79.1/32'
 	option metric '256'
 
