data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -25,7 +25,42 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '47.246.45.145/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '47.246.45.211/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '47.246.45.212/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '47.246.45.213/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '47.246.45.214/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '47.246.45.242/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '47.246.45.243/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '47.246.45.251/32'
 	option metric '256'
 
 config route
