data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -315,6 +315,16 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.14.211/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.26.15.211/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '138.113.167.17/32'
 	option metric '256'
 
@@ -396,6 +406,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.66.1.46/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.67.68.7/32'
 	option metric '256'
 
 config route
@@ -511,6 +526,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '199.34.228.49/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '205.234.175.175/32'
 	option metric '256'
 
 config route
