data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -365,6 +365,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '151.101.3.52/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '151.101.135.52/32'
 	option metric '256'
 
@@ -436,6 +441,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.67.69.232/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.67.73.82/32'
 	option metric '256'
 
 config route
@@ -516,6 +526,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '185.199.111.153/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '188.114.96.5/32'
 	option metric '256'
 
 config route
