--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -80,6 +80,131 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '54.192.95.15/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.18/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.21/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.27/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.29/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.41/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.43/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.50/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.55/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.59/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.69/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.70/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.78/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.80/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.82/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.85/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.91/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.92/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.93/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.97/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.99/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.109/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.122/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.124/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '54.192.95.129/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '66.33.60.34/32'
 	option metric '256'
 
@@ -381,6 +506,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '162.159.141.50/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '163.181.49.235/32'
 	option metric '256'
 
 config route
