data: add new blocked IPs
Signed-off-by: Álvaro Fernández Rojas <noltari@gmail.com>

--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -25,6 +25,11 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '18.67.240.21/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '47.246.45.145/32'
 	option metric '256'
 
@@ -300,6 +305,16 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.19.164.59/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.19.165.59/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.21.16.1/32'
 	option metric '256'
 
@@ -430,7 +445,17 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '104.26.10.71/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '104.26.10.183/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '104.26.11.71/32'
 	option metric '256'
 
 config route
@@ -500,7 +525,17 @@ config route
 
 config route
 	option interface 'cloudflare'
+	option target '162.159.138.60/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '162.159.140.98/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '162.159.140.229/32'
 	option metric '256'
 
 config route
@@ -546,6 +581,11 @@ config route
 config route
 	option interface 'cloudflare'
 	option target '172.67.68.7/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '172.67.68.30/32'
 	option metric '256'
 
 config route
