--- a/data/laliga-openwrt-routes.config
+++ b/data/laliga-openwrt-routes.config
@@ -1,5 +1,20 @@
 config route
 	option interface 'cloudflare'
+	option target '45.11.37.254/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '45.11.38.254/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
+	option target '45.11.39.254/32'
+	option metric '256'
+
+config route
+	option interface 'cloudflare'
 	option target '172.67.200.91/32'
 	option metric '256'
 
